--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,7 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+
 .center {
     width: 960px;
     margin: auto;
-    background-color: #ffffff;
 }
 
 header {
@@ -14,7 +17,7 @@ header {
 .main {
     background-color: #4aaaa5;
     color: white;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     width: 250px;
     height: 90px;
     padding: 30px;
@@ -61,7 +64,7 @@ h3 {
 }
 
 .content-wrapper h1,
-.content-wrapper h3 {
+.social h3 {
     /*flex: 1;*/
     border-bottom: 2px solid gray;
     padding-bottom: 20px;
@@ -70,12 +73,10 @@ h3 {
 
 h3 {
     font-size: 20px;
-    margin-right: 20px;
-    margin-left: 20px;
     /*margin:auto;*/
 }
 
-.content img {
+.article-image {
     height: 150px;
     width: 200px;
     margin-right: 20px;
@@ -89,17 +90,17 @@ p {
 }
 
 .content {
-    padding: 20px;
+    padding: 30px;
     /*margin-right: 20px;*/
     width: 650px;
-   /* height: 480px;*/
+    /* height: 480px;*/
     font-family: Arial, 'Helvetica Neue', Helvetica, Sans-Serif;
     margin-top: 40px;
     line-height: 25px;
     float: left;
     background-color: white;
     /*margin-bottom: 40px;*/
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
 }
 
 .social {
@@ -108,9 +109,8 @@ p {
     /*height: 200px;*/
     float: right;
     background-color: white;
-    padding-top: 20px;
-    padding-bottom: 20px;
     text-align: center;
+    padding: 20px;
     /*box-sizing: border-box;*/
 }
 
@@ -120,7 +120,6 @@ p {
 }
 
 footer {
-    clear: both;
     /*height: 100px;*/
     text-align: center;
     background-color: #666666;
@@ -130,9 +129,9 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
-    margin-top: 40px;
-   /* box-sizing: border-box;*/
-   border-top: 10px solid #4aaaa5;
+    /*margin-top: 40px;
+    /* box-sizing: border-box;*/
+    border-top: 10px solid #4aaaa5;
 }
 
 .footer-text {
@@ -140,72 +139,193 @@ footer {
     padding-top: 30px;
     padding-bottom: 30px;
     /*margin-top: 5px;*/
-    
     bottom: 0;
     width: 100%;
 }
 
 .sticky-footer {
-    min-height: calc(100vh-265px);
+    /*min-height: calc(100vh-170px);*/
+    margin-bottom: 170px;
 }
 
-@media screen and (max-width: 980px) {
 
-.center {
-    width: 730px;
+/*contact page*/
+
+#contact-form ul {
+    margin-bottom: 20px;
 }
 
-.social {
-    width: 270px;
+#contact-form li {
+    margin-bottom: 10px;
 }
 
-.content {
-    width: 420px;
-    margin-bottom: 40px;
+label,
+input[type=text],
+input[type=email],
+textarea {
+    display: block;
+    width: 100%;
 }
 
-html {
-    margin-bottom: 14%;
+input[type=text],
+input[type=email],
+textarea {
+    height: 35px;
+    padding: 0 10px;
+    font-size: 14px;
+    border: 1px solid #ddd;
 }
 
+textarea {
+    height: 200px;
 }
 
-@media screen and (max-width: 768px) {
+input[type=submit] {
+    padding: 10px 30px;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    background: #4aaaa5;
+    border: 0 none;
+}                                                                                                                       
 
-.center {
-    width: 730px;
-  
+
+/*portfolio page*/
+
+.image-container {
+    float: left;
+    position: relative; /*Allows absolute positioning of elements within a container*/
+    margin-bottom: 30px;    
+    margin-top: 30px;
+
 }
 
-.social {
-    width: 730px;
-    margin-bottom: 50px;
-    margin-top: none;
-    /*box-sizing: border-box;*/
 
+.image-container img {
+    width: 275px;
+    height: 200px;
+}
+ 
+.image-container:nth-child(even){
+    margin-right: 40px;
+
+     
 }
 
-.content {
-    width: 730px;
-    margin-bottom: 0;
+.image-container h3 {
+    width: 100%;
+    background-color: #4aaaa5;
+    font-size: 25px;
+    color: white;
+    font-weight: normal;
+    text-align: center;
+    padding: 20px;  
+    position: absolute;
+    bottom: 20px;
     
 }
 
-.content img {
 
-    width: 50%;
-    height: 50%;
+@media screen and (max-width: 980px) {
+    .center {
+        width: 730px;
+    }
+    .social {
+        width: 270px;
+    }
+    .content {
+        width: 420px;
+        margin-bottom: 40px;
+    }
+    html {
+        margin-bottom: 14%;
+    }
+
+    ./*image-content img {
+        margin-left: 40px;
+    }
+
+    .image-container {
+        width: 275px;
+        margin-left: 40px;
+    }*/
 }
 
-html {
 
-    margin-bottom: 120px;
-}
+
+
+@media screen and (max-width: 768px) {
+    .center {
+        width: 726px;
+    }
+    .content-wrapper>* {
+        float: none;
+        width: auto;
+        margin-bottom: 50px;
+    }
+    .social {
+        /*margin-bottom: 50px;*/
+        /*box-sizing: border-box;*/
+    }
+   
+   .image-container {
+    margin: 0 auto;
+   }
+    .content img {
+        width: 50%;
+        height: 50%;
+    }
+    html {
+        margin-bottom: 120px;
+    }
 
 }
 
 @media screen and (max-width: 640px) {
+    .center {
+        width: 640px;
+    }
+    h1 {
+        margin: auto;
+    }
+    .content img {
+        width: 500px;
+        height: 400px;
+        float: none;
+        padding-left: 10px;
+    }
+    h1,
+    h3 {
+        padding-left: 20px;
+    }
+    .main {
+        width: 640px;
+    }
+    .main-position {
+        float: none;
+    }
+    .nav {
+        float: none;
+        text-align: center;
+        height: 65px;
+        margin: none;
+        width: 100%;
+    }
+    .social {}
+    .content {
+        float: none;
+    }
+    p {
+        font-size: 15px;
+    }
+    .content-wrapper {
+        margin-left: 20px;
+    }
+    .content-wrapper>* {
+        width: calc(100% - 60px);
+    }
 
-
-
+    header {
+        height: auto;
+    }
 }
