--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -17,7 +17,6 @@ header {
 .main {
     background-color: #4aaaa5;
     color: white;
-    /*box-sizing: border-box;*/
     width: 250px;
     height: 90px;
     padding: 30px;
@@ -43,7 +42,6 @@ body {
 
 .nav {
     float: right;
-    font-size: 15px;
     margin-top: 40px;
 }
 
@@ -65,7 +63,6 @@ h3 {
 
 .content-wrapper h1,
 .social h3 {
-    /*flex: 1;*/
     border-bottom: 2px solid gray;
     padding-bottom: 20px;
     margin-bottom: 20px;
@@ -73,7 +70,6 @@ h3 {
 
 h3 {
     font-size: 20px;
-    /*margin:auto;*/
 }
 
 .article-image {
@@ -91,27 +87,21 @@ p {
 
 .content {
     padding: 30px;
-    /*margin-right: 20px;*/
     width: 650px;
-    /* height: 480px;*/
     font-family: Arial, 'Helvetica Neue', Helvetica, Sans-Serif;
     margin-top: 40px;
     line-height: 25px;
     float: left;
     background-color: white;
-    /*margin-bottom: 40px;*/
-    /*box-sizing: border-box;*/
 }
 
 .social {
     margin-top: 40px;
     width: 270px;
-    /*height: 200px;*/
     float: right;
     background-color: white;
     text-align: center;
     padding: 20px;
-    /*box-sizing: border-box;*/
 }
 
 .social img {
@@ -120,7 +110,6 @@ p {
 }
 
 footer {
-    /*height: 100px;*/
     text-align: center;
     background-color: #666666;
     font-size: 20px;
@@ -129,8 +118,6 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
-    /*margin-top: 40px;
-    /* box-sizing: border-box;*/
     border-top: 10px solid #4aaaa5;
 }
 
@@ -138,13 +125,11 @@ footer {
     color: white;
     padding-top: 30px;
     padding-bottom: 30px;
-    /*margin-top: 5px;*/
     bottom: 0;
     width: 100%;
 }
 
 .sticky-footer {
-    /*min-height: calc(100vh-170px);*/
     margin-bottom: 170px;
 }
 
@@ -187,29 +172,26 @@ input[type=submit] {
     cursor: pointer;
     background: #4aaaa5;
     border: 0 none;
-}                                                                                                                       
+}
 
 
 /*portfolio page*/
 
 .image-container {
     float: left;
-    position: relative; /*Allows absolute positioning of elements within a container*/
-    margin-bottom: 30px;    
+    position: relative;
+    /*Allows absolute positioning of elements within a container*/
+    margin-bottom: 10px;
     margin-top: 30px;
-
 }
-
 
 .image-container img {
     width: 275px;
     height: 200px;
 }
- 
-.image-container:nth-child(even){
-    margin-right: 40px;
 
-     
+.image-container:nth-child(even) {
+    margin-right: 40px;
 }
 
 .image-container h3 {
@@ -219,11 +201,13 @@ input[type=submit] {
     color: white;
     font-weight: normal;
     text-align: center;
-    padding: 20px;  
+    padding: 20px;
     position: absolute;
     bottom: 20px;
-    
 }
+
+
+/*Media Queries (980px, 768px, 640px)*/
 
 @media screen and (max-width: 980px) {
     .center {
@@ -234,22 +218,18 @@ input[type=submit] {
     }
     .content {
         width: 420px;
-        margin-bottom: 40px;
     }
-    html {
-        margin-bottom: 14%;
-    }
-
-    ./*image-content img {
-        margin-left: 40px;
-    }
-
     .image-container {
-        width: 275px;
-        margin-left: 40px;
-    }*/
+        width: 100%;
+    }
+    .image-container img {
+        width: 360px;
+        height: 258px;
+    }
+    .content-about {
+        margin-bottom: 170px;
+    }
 }
-
 
 @media screen and (max-width: 768px) {
     .center {
@@ -258,24 +238,28 @@ input[type=submit] {
     .content-wrapper>* {
         float: none;
         width: auto;
-        margin-bottom: 50px;
+    }
+    .image-container {
+        margin: 0 auto;
+        float: left;
+        width: 313px;
+        margin-bottom: 20px;
+    }
+    .content img {
+        width: 313px;
+        height: 236px;
+        margin-bottom: 40px;
     }
     .social {
-        /*margin-bottom: 50px;*/
-        /*box-sizing: border-box;*/
+        text-align: left;
+        margin-bottom: 150px;
     }
-   
-   .image-container {
-    margin: 0 auto;
-   }
-    .content img {
-        width: 50%;
-        height: 50%;
+    .content-about {
+        margin-bottom: 40px;
     }
-    html {
-        margin-bottom: 120px;
+    .social-contact {
+        margin-bottom: 170px;
     }
-
 }
 
 @media screen and (max-width: 640px) {
@@ -289,11 +273,9 @@ input[type=submit] {
         width: 500px;
         height: 400px;
         float: none;
-        padding-left: 10px;
     }
-    h1,
-    h3 {
-        padding-left: 20px;
+    .image-container h3 {
+        width: 500px;
     }
     .main {
         width: 640px;
@@ -303,17 +285,17 @@ input[type=submit] {
     }
     .nav {
         float: none;
-        text-align: center;
         height: 65px;
-        margin: none;
-        width: 100%;
     }
-    .social {}
+    .nav a {
+        padding-right: 70px;
+        padding-left: 70px;
+    }
     .content {
         float: none;
     }
     p {
-        font-size: 15px;
+        font-size: 20px;
     }
     .content-wrapper {
         margin-left: 20px;
@@ -321,14 +303,7 @@ input[type=submit] {
     .content-wrapper>* {
         width: calc(100% - 60px);
     }
-
     header {
         height: auto;
     }
 }
-
-
-
-
-
-
